--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -30,6 +30,6 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/android-node-gradle:latest
-            ghcr.io/${{ github.repository_owner }}/android-node-gradle:21-35-22-8.11.1
+            ghcr.io/${{ github.repository_owner }}/ionic:latest
+            ghcr.io/${{ github.repository_owner }}/ionic:21-35-22-8.11.1
 
